# myrpc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: CompilerOption.cmake  dependence.cmake  get_boost.cmake  get_lua.cmake  get_lzo.cmake  get_mariadb.cmake  get_protobuf.cmake
cmake/modules/: FindBehaviac.cmake  FindLZO.cmake  FindLua51.cmake  FindMariadbClient.cmake  FindMySqlClient.cmake  FindToLuapp.cmake  MSVCRuntime.cmake
doc/: index.md
source/: .gitignore
source/common/: CMakeLists.txt  common.cpp  common.h  generator_id.h  ports.h  ptime.h  rpc_helper.h  timer_worker.h  yield.hpp
source/connect_mgr/: CMakeLists.txt  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  future_t.h  process_queue.h  task_io.h
source/rpc_server/: CMakeLists.txt  pb_header.h  request_info.h  rpc_channel.cpp  rpc_channel.h  rpc_controller.h  svc_name2id.h
source/service_mgr/: CMakeLists.txt  client_invoke.cpp  client_invoke.h  rpc_server.cpp  rpc_server.h  service_mgr.cpp  service_mgr.h
source/services/: CMakeLists.txt  client.h  create_user_test.cpp  create_user_test.h  implement.h  service.h  service_factory.h
source/services/crucis/: add_user_res.pb.cc  add_user_res.pb.h  auth_error_code.pb.cc  auth_error_code.pb.h  create_user_test_param_define.pb.cc  create_user_test_param_define.pb.h  echo_test_param_define.pb.cc  echo_test_param_define.pb.h  error_code.pb.cc  error_code.pb.h  message_type.pb.cc  message_type.pb.h  rpc_request_data.pb.cc  rpc_request_data.pb.h  rpc_response_data.pb.cc  rpc_response_data.pb.h  servic_result.pb.cc  servic_result.pb.h  service_error.pb.cc  service_error.pb.h  service_factory_param_define.pb.cc  service_factory_param_define.pb.h  user_type.pb.cc  user_type.pb.h
tests/: CMakeLists.txt
tests/source/: unit-asio_client.cpp  unit-generator_id.cpp  unit-rpc_reg_server.cpp  unit-rpc_service.cpp
tools/: README.md  README_en.md  auto.bat
tools/cppcode/: echo_test.h
tools/proto/crucis/: add_user_res.proto  auth_error_code.proto  create_user_test_param_define.proto  echo_test_param_define.proto  error_code.proto  rpc_request_data.proto  rpc_response_data.proto  servic_result.proto  service_error.proto  service_factory_param_define.proto
tools/proto_auto/: proto_auto.sln
tools/proto_auto/CofProtoDesc/: CofProtoDesc.csproj  create_user_test.cs  echo_test.cs  head_meta.cs  sf.cs
tools/proto_auto/CofProtoDesc/Properties/: AssemblyInfo.cs
tools/proto_auto/CppGenerator/: CppGenerator.csproj  Program.cs
tools/proto_auto/CppGenerator/Properties/: AssemblyInfo.cs  Resources.Designer.cs
tools/proto_auto/CppGenerator/Source/: CppUtil.cs  HandlerGenarater.cs  TypesOfCpp.cs  TypesOfPB.cs
tools/proto_auto/CppGenerator/Templates/: cof_ps_enum.cshtml  cof_ps_enum_protobuff.cshtml  cof_ps_service.cshtml  cof_ps_service_base_h.cshtml  cof_ps_service_h.cshtml  cof_ps_service_param_protobuff.cshtml  cof_ps_struct_protobuff.cshtml
tools/proto_auto/CppGenerator/Templates/GamerKeys/: CofGamerKeys.cshtml
tools/proto_auto/ProtoSharp/: Attribute.cs  CommonUtil.cs  Descriptor.cs  MetaTypes.cs  ProtoSharp.csproj
tools/proto_auto/ProtoSharp/Properties/: AssemblyInfo.cs
tools/proto_auto/server/include/protosharp_gen/: service_factory.h
tools/proto_auto/server/proto/protosharp_gen/: rpc_request_data.proto  rpc_response_data.proto  service_error.proto  service_factory_param_define.proto
tools/proto_auto/server/proto/protosharp_gen/cof_proto_desc/: auth_error_code.proto  servic_result.proto  service_error.proto  service_factory_param_define.proto
tools/proto_auto/server/proto/protosharp_gen/crucis/: message_type.proto
tools/proto_auto/server/src/protosharp_gen/: echo_test.cpp  service_factory.cpp
tools/tool/: gmock_main.lib
